# dune-functions

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  dune.module
cmake/modules/: CMakeLists.txt  DuneFunctionsMacros.cmake
doc/: evalfunction_with_bind.txt
doc/code-generation/: argyrisTransformationMatrix.py
doc/doxygen/: CMakeLists.txt  Doxylocal  mainpage.md
dune/: CMakeLists.txt
dune/functions/: CMakeLists.txt
dune/functions/analyticfunctions/: CMakeLists.txt  monomialset.hh  polynomial.hh  trigonometricfunction.hh
dune/functions/analyticfunctions/test/: CMakeLists.txt
dune/functions/backends/: CMakeLists.txt  concepts.hh  istlcommunication.hh  istlmatrixfactory.hh  istlvectorbackend.hh  singlerowcolmatrix.hh
dune/functions/backends/test/: CMakeLists.txt  istlmatrixfactorytest.cc  istlvectorbackendtest.cc
dune/functions/common/: CMakeLists.txt  childextraction.hh  compositenode.hh  defaultderivativetraits.hh  derivativedirection.hh  differentiablefunction.hh  differentiablefunction_imp.hh  differentiablefunctionfromcallables.hh  dynamicpowernode.hh  faceorientation.hh  functionconcepts.hh  indexaccess.hh  innerproduct.hh  leafnode.hh  localfunction.hh  mapperutilities.hh  multidomain.hh  multidot.hh  persistentgridview.hh  polymorphicsmallobject.hh  powernode.hh  pullback.hh  signature.hh  subdomain.hh  traversal.hh  treecontainer.hh  treedata.hh  treepath.hh  typeerasure.hh  typetraits.hh  typetreeutility.hh  utility.hh  vectorspan.hh  visitor.hh
dune/functions/common/test/: CMakeLists.txt  derivativetraitstest.cc  differentiablefunctiontest.cc  functionconceptstest.cc  persistentgridviewtest.cc
dune/functions/functionspacebases/: CMakeLists.txt  CodeGeneration_AW.py  CodeGeneration_HHJ.py  argyrisbasis.hh  arnoldwinther.hh  arnoldwinther.inc.hh  arnoldwintherbasis.hh  arnoldwintherbasis_inc.hh  basistags.hh  basixbasis.hh  boundarydofs.hh  brezzidouglasmarinibasis.hh  bsplinebasis.hh  cachedglobalbasis.hh  compositebasis.hh  concepts.hh  containerdescriptors.hh  cubichermitebasis.hh  defaultglobalbasis.hh  defaultlocalview.hh  defaultnodetorangemap.hh  dgbasis.hh  doublepiola.hh  dynamicpowerbasis.hh  flatindexprebasismixin.hh  flatvectorview.hh  globalgridview.hh  globalvaluedlocalfiniteelement.hh  hellanhermannjohnson.hh  hellanhermannjohnsonbasis.hh  hellanhermannjohnsonbasis_.hh  hellanhermannjohnsonbasis_inc.hh  hellanherrmannjohnsonbasis.hh  hellanherrmannjohnsonbasis0_inc.hh  hellanherrmannjohnsonbasis_inc.hh  hermitebasis.hh  hierarchicallagrangebasis.hh  hierarchicnodetorangemap.hh  hierarchicvectorwrapper.hh  indextree.hh  (+41 more)
dune/functions/functionspacebases/basix/: CMakeLists.txt  finiteelement.hh  localfiniteelement.hh  prebasis.hh  transform.hh  utility.hh
dune/functions/functionspacebases/genericlocalfiniteelements/: CMakeLists.txt  hermite.hh  polynomialbasiscoefficients.hh
dune/functions/functionspacebases/multidomain/: CMakeLists.txt  domaininfo.hh  multidomaingridview.hh  restricted.hh  restrictedgridview.hh  restrictedindexset.hh  subdomainbasis.hh  subdomaingridview.hh  subdomainindexset.hh
dune/functions/functionspacebases/test/: CMakeLists.txt  argyristest.cc  arnoldwinthertest.cc  basisfactories.hh  basistest.hh  basixbasistest.cc  basixfiniteelementtest.cc  benchmarkindices.cc  blockingtest.cc  brezzidouglasmarinibasistest.cc  compositebasistest.cc  containerdescriptortest.cc  cubichermitebasis.hh  cubichermitetest.cc  enabledifferentiabilitycheck.hh  globalvaluedlfetest.cc  gridviewfunctionspacebasistest.cc  hellanhermannjohnsonbasistest.cc  hellanherrmannjohnsonbasistest.cc  hermitebasistest.cc  hermitetest.cc  hierarchicvectorwrappertest.cc  indextreetest.cc  interpolatetest.hh  lfebasistest.cc  lobattoadaptivebasistest.cc  lobattobasistest.cc  makebasistest.cc  morleytest.cc  multidomainbasistest.cc  multidomaintest.cc  (+12 more)
dune/functions/functionspacebases/transformed/: CMakeLists.txt  basisset.hh  bindcontext.hh  concepts.hh  derivative.hh  derivativetraits.hh  geometryderivative.hh  localfiniteelement.hh  piola.hh  pipeline.hh  precomputeidentity.hh  pullback.hh  referenceevaluation.hh  simplexcontext.hh
dune/functions/gridfunctions/: CMakeLists.txt  analyticgridviewfunction.hh  coarsenedgridfunction.hh  composedgridfunction.hh  discreteglobalbasisfunction.hh  elementgeometrygridfunction.hh  facenormalgridfunction.hh  globalbasisfunctions.hh  gridfunction.hh  gridfunction_imp.hh  gridviewentityset.hh  gridviewfunction.hh  hierarchicgridfunction.hh  localderivativetraits.hh  refinedgridfunction.hh
dune/functions/gridfunctions/test/: CMakeLists.txt  discreteglobalbasisfunctionderivativetest.cc  discreteglobalbasisfunctiontest.cc  facenormalgridfunctiontest.cc  gridfunctiontest.hh  hierarchicgridfunctiontest.cc
dune/functions/parallel/: CMakeLists.txt  entityowner.hh  globalindexset.hh  subpartitionprovider.hh  uniqueborderpartition.hh
dune/python/functions/: CMakeLists.txt  discretefunction.hh  globalbasis.hh  hierarchicvectorwrapper.hh  rangetype.hh  tree.hh
dune/typetree2/: CMakeLists.txt  transformtree.hh  treecontainer.hh  typetree.hh
dune/typetree2/test/: CMakeLists.txt  testtreecontainer.cc  testtypetree.cc  typetreetestutility.hh
examples/: CMakeLists.txt  adaptivity.cc  advection-reaction-dg.cc  cutfem-poisson.cc  indexing.cc  interpolation.cc  parallel-poisson-pq3.cc  poisson-mfem.cc  poisson-pq2.cc  poisson-pq2.py  square_triangles.msh  stokes-mini.cc  stokes-taylorhood.cc  stokes.hh  transformed-basis-benchmark.cc  vectorgenerator.cc
python/dune/functions/: globalbasis.py  tree.py
(+2 files in other folders)
